css/cs32.css
/* ... */
.margin-centered {
  margin: 0 auto;
}

/* Responsiveness in tables */
@media only screen and (max-width: 990px),
  (min-device-width: 768px) and (max-device-width: 1024px) {
  /* Force table to not be like tables anymore */
  table,
  thead,
  tbody,
  th,
  td,
  tr {
    display: block;
  }

  .flex-row {
    flex-wrap: wrap;
    /* display: block !important; */
  }

  iframe {
    display: none;
  }

  /* Hide table headers (but not display: none;, for accessibility) */
  thead tr,
  tr th {
    position: absolute;
    top: -9999px;
    left: -9999px;
  }

  tr:nth-child(n + 2) {
    padding-top: 12px;
    padding-bottom: 12px;
  }

  td {
    /* Behave  like a "row" */
    border: none;
    position: relative;
    padding-left: 50%;
  }

  td:before {
    /* Now like a table header */
    position: absolute;
    /* Top/left values mimic padding */
    top: 6px;
    left: 6px;
    width: 45%;
    padding-right: 10px;
    white-space: nowrap;
  }

  /* For tables that have assignments (projects & labs) */
  table.assignment td:nth-of-type(1):before {
    content: "Assignment";
  }
  table.assignment td:nth-of-type(2):before {
    content: "Out";
  }
  table.assignment td:nth-of-type(3):before {
    content: "Due";
  }

  /* Lectures table */
  table.lecture td:nth-of-type(1):before {
    content: "Lecture #";
  }
  table.lecture td:nth-of-type(2):before {
    content: "Date";
  }
  table.lecture td:nth-of-type(3):before {
    content: "Topic";
  }
  table.lecture td:nth-of-type(4):before {
    content: "Readings";
  }
  table.lecture td:nth-of-type(5):before {
    content: "Lecture (.pdf)";
  }
  table.lecture td:nth-of-type(6):before {
    content: "Recording (.mp4)";
  }
  table.lecture td:nth-of-type(7):before {
    content: "Take Away Questions";
  }

  /* For the Tom's office hours table */
  table.tom-hours td:nth-of-type(1):before {
    content: "Day";
  }
  table.tom-hours td:nth-of-type(2):before {
    content: "Time";
  }

  /* For the lab hours table */
  table.lab-hours td:nth-of-type(1):before {
    content: "Time";
  }
  table.lab-hours td:nth-of-type(2):before {
    content: "Location";
  }
  table.lab-hours td:nth-of-type(3):before {
    content: "TAs";
  }

  /* For the ta hours table */
  table.ta-hours td:nth-of-type(1):before {
    content: "Time";
  }
  table.ta-hours td:nth-of-type(2):before {
    content: "Sunday";
  }
  table.ta-hours td:nth-of-type(3):before {
    content: "Monday";
  }
  table.ta-hours td:nth-of-type(4):before {
    content: "Tuesday";
  }
  table.ta-hours td:nth-of-type(5):before {
    content: "Wednesday";
  }
  table.ta-hours td:nth-of-type(6):before {
    content: "Thursday";
  }
  table.ta-hours td:nth-of-type(7):before {
    content: "Friday";
  }
  table.ta-hours td:nth-of-type(8):before {
    content: "Saturday";
  }

  /* Gear up table */
  table.gear-up td:nth-of-type(1):before {
    content: "Date";
  }
  table.gear-up td:nth-of-type(2):before {
    content: "Topic";
  }
  table.gear-up td:nth-of-type(3):before {
    content: "Slides";
  }

  /* Makes sure empty cells won't have labels */
  table td:empty {
    display: none;
  }
}

/* Alternate background colors (and adjust text colors to compensate) */
.section-header {
  background-color: #f9f5da;
  height: 50px;
}

.flex-row {
  flex-direction: row;
}

.flex-col {
  display: flex;
  flex-direction: column;
}

.justify-center {
  justify-content: center;
}

.align-center {
  align-items: center;
}

.basis-33 {
  flex-basis: 33%;
}

.width-100 {
  width: 100%;
}

.width-max {
  width: max-content;
}

.m-1 {
  margin: 1em;
}

@media (min-width: 768px) {
  .large-hidden {
    display: none;
  }
  .flex-row {
    display: flex;
    gap: 6vh;
  }
}

/* Bootstrap hidden class uses !important flag */
.hidden-weak {
  display: none;
}

@media (max-width: 768px) {
  .intro .brand-heading {
    padding-top: 8vh !important;
  }
}

@media (min-width: 768px) {
  .toggle-flex {
    flex-direction: row;
  }

  .toggle-target {
    flex-direction: row;
  }
}

#navbar-open-button img {
  width: 45px;
}

#navbar-open-button:hover {
  cursor: pointer;
}

#navbar-close-button:hover {
  cursor: pointer;
  color: #d6d2da;
}

.info-box-opaque {
  display: flex;
  justify-content: center;
  border-radius: 5px;
  padding: 30px;
}

#course-info h3 {
  color: #1b0b5c;
  /* text-shadow: 1px 2px 0 rgb(254, 211, 49); */
}

#course-info p,
#course-info li {
  color: #1b0b5c;
}

#course-info blockquote {
  color: #777777;
}

#course-info tagline {
  color: #777777;
}

#assignments {
  background-color: #f9f5da;
}

table a {
  color: #1b0b5c;
  border-radius: 5px;
  background-color: #f4effa;
  padding: 0 4px;
  text-decoration: none;
}

table a:hover {
  color: #1b0b5c;
  border-radius: 5px;
  background-color: #e9e2f1;
  padding: 0 4px;
  text-decoration: none;
}

#lectures {
  background-color: #f9f5da;
}

/* #lectures a {
    color: #1B0B5C;
    border-radius: 5px;
    background-color: #f4effa;
    padding: 0 4px;
} */

#hours {
  background-color: #f9f5da;
}

#staff {
  margin-top: 30px;
  width: 100%;
  align-items: center;
}

#staff h2 {
  /*color: #000;*/
  /*color: #fff;*/
  /*font-family: "Montserrat", serif;*/
}

#staff h4 {
  color: #fff;
  font-family: "Space and Astrology", serif;
  letter-spacing: 1px;
}

.intro-img {
  max-width: 100%;
  max-height: 100%;
}

@keyframes shake {
  25% {
    transform: rotate(-12deg);
}
50% {
    transform: rotate(12deg);
}
75% {
    transform: rotate(-12deg);
}
}


.drawings-box {
  padding-top: 4vh;
}

.drawings-box img:hover {
    animation: shake .5s ease-in-out;
}

.drawing {
  padding-left: 1em;
  padding-right: 1em;
}


.divider {
  width: 100vw;
  padding-left: 12vw;
  padding-right: 12vw;
  padding-top: 4vh;
  padding-bottom: 1vh;
}
/* ... */

